# embedded-template-rs

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: build-app-template.yml  build.yml
application/: .genignore  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  cargo-generate.toml  chips.txt  cleanup.rhai  target-selection.rhai
application/cross/: .embed.toml  Cargo.toml
application/cross/.cargo/: config.toml
application/cross/board/: Cargo.toml
application/cross/self-tests/: Cargo.toml
application/cross/{{project-name}}/: Cargo.toml
application/cross/{{project-name}}/src/: lib.rs  main.rs
application/host-target-tests/: Cargo.toml  README.md
application/host-target-tests/tests/: serial.rs
application/messages/: Cargo.toml  README.md
application/messages/src/: lib.rs  tests.rs
application/target-crates/: .embed.toml  Cargo.toml
application/target-crates/board/: README.md
application/target-crates/self-tests/: Cargo.toml  README.md
application/target-crates/self-tests/tests/: test.rs
application/target-crates/{{project-name}}/: Cargo.toml  README.md
application/target-crates/{{project-name}}/src/: lib.rs
application/xtask/: Cargo.toml  README.md
application/xtask/src/: args.rs  cargo_helpers.rs  chips.rs  main.rs
