[package]
name = "host-target-tests"
version = "0.1.0"
edition = "2018"
authors= ["{{authors}}"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
messages = { path = "../messages" }
anyhow = "1.0"
parking_lot = "0.11"
postcard = { version = "0.7", features = ["alloc"] }
serialport = "4.0"
