[package]
name = "messages"
version = "0.1.0"
edition = "2018"
authors= ["{{authors}}"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0", default-features = false }
serde_derive = "1.0"

[dev-dependencies]
postcard = {version="0.7", features=["alloc"]}
quickcheck = "1.0"
quickcheck_macros = "1.0"
